--- a/README.adoc
+++ b/README.adoc
@@ -30,11 +30,11 @@ Ce TP vise à reprendre les diagrammes des UC et les lier avec le diagramme de c
 
 == À propos...
 
-NOM:: DOE
+NOM:: MABILLE
 
-Prénom:: John
+Prénom:: Matthis
 
-Groupe #::
+Groupe #::1B
 
 [%interactive]
 - [X] Enseignants
